fixed success message alignment

--- a/src/styles_css/Footer.css
+++ b/src/styles_css/Footer.css
@@ -302,4 +302,8 @@ p {
   .first-section1 {
     padding: 0px;
   }
+  .success-message {
+    margin: 0 auto;
+    padding-top: 20px;
+  }
 }
